--- a/src/ml/dune
+++ b/src/ml/dune
@@ -2,7 +2,7 @@
  (name gwdb)
  (wrapped false)
  (preprocess (pps js_of_ocaml-ppx))
- (libraries yojson js_of_ocaml geneweb.def geneweb.wserver geneweb.util geneweb.io)
+ (libraries js_of_ocaml geneweb.def geneweb.wserver geneweb.util geneweb.io)
  (modules gwdb)
  (flags       (:standard -no-keep-locs))
 )
@@ -11,7 +11,7 @@
 (executable
  (name gwb)
  (preprocess (pps js_of_ocaml-ppx))
- (libraries gwdb geneweb yojson js_of_ocaml jingoo)
+ (libraries gwdb geneweb js_of_ocaml jingoo)
  (modules Conf Data Ezgw Gwb Templates)
  (flags       (:standard -no-keep-locs))
 )
