--- a/src/ml/dune
+++ b/src/ml/dune
@@ -7,11 +7,10 @@
  (flags       (:standard -no-keep-locs))
 )
 
-
 (executable
  (name gwb)
  (preprocess (pps js_of_ocaml-ppx))
- (libraries gwdb geneweb yojson js_of_ocaml jingoo)
- (modules Conf Data Ezgw Gwb Templates I18n)
+ (libraries gwdb gwxjg geneweb yojson js_of_ocaml jingoo)
+ (modules Conf Gwb Templates I18n)
  (flags       (:standard -no-keep-locs))
 )
